--- a/hpmor-5.tex
+++ b/hpmor-5.tex
@@ -1,8 +1,16 @@
 \input{hp-header}
+
 \begin{document}
 {
 \pagestyle{empty}
-\input{hp-intro-5}
+
+\newcommand{\hpBookNo}{2}
+\newcommand{\hpBookChar}{Harry James Potter-{\kern 2pt}Evans-{\kern 4pt}Verres}
+\newcommand{\hpBookTitle}{Last Enemy}
+\newcommand{\hpBookChapters}{Chapters 86--99}
+\newcommand{\hpBookOther}{}
+\input{hp-titlepage}
+
 \pagenumbering{gobble}
 \input{hp-contents}
 \cleartorecto
@@ -10,20 +18,20 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-\input{new-chapters/hpmor-chapter-086}
-\input{new-chapters/hpmor-chapter-087}
-\input{new-chapters/hpmor-chapter-088}
-\input{new-chapters/hpmor-chapter-089}
-\input{new-chapters/hpmor-chapter-090} 
-\input{new-chapters/hpmor-chapter-091}
-\input{new-chapters/hpmor-chapter-092}
-\input{new-chapters/hpmor-chapter-093}
-\input{new-chapters/hpmor-chapter-094}
-\input{new-chapters/hpmor-chapter-095}
-\input{new-chapters/hpmor-chapter-096}
-\input{new-chapters/hpmor-chapter-097}
-\input{new-chapters/hpmor-chapter-098}
-\input{new-chapters/hpmor-chapter-099}
+\input{chapters/hpmor-chapter-086}
+\input{chapters/hpmor-chapter-087}
+\input{chapters/hpmor-chapter-088}
+\input{chapters/hpmor-chapter-089}
+\input{chapters/hpmor-chapter-090} 
+\input{chapters/hpmor-chapter-091}
+\input{chapters/hpmor-chapter-092}
+\input{chapters/hpmor-chapter-093}
+\input{chapters/hpmor-chapter-094}
+\input{chapters/hpmor-chapter-095}
+\input{chapters/hpmor-chapter-096}
+\input{chapters/hpmor-chapter-097}
+\input{chapters/hpmor-chapter-098}
+\input{chapters/hpmor-chapter-099}
 
 \input{hp-colophon}
 \end{document}
