--- a/hpmor-3.tex
+++ b/hpmor-3.tex
@@ -3,7 +3,14 @@
 \begin{document}
 {
 \pagestyle{empty}
-\input{hp-intro-3}
+
+\newcommand{\hpBookNo}{3}
+\newcommand{\hpBookChar}{Harry James Potter-{\kern 2pt}Evans-{\kern 4pt}Verres}
+\newcommand{\hpBookTitle}{Deathly Shadows}
+\newcommand{\hpBookChapters}{Chapters 38--63}
+\newcommand{\hpBookOther}{}
+\input{hp-titlepage}
+
 \pagenumbering{gobble}
 \input{hp-contents}
 \cleartorecto
@@ -11,32 +18,32 @@
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-\include{new-chapters/hpmor-chapter-038}
-\include{new-chapters/hpmor-chapter-039}
-\include{new-chapters/hpmor-chapter-040}
-\include{new-chapters/hpmor-chapter-041}
-\include{new-chapters/hpmor-chapter-042} 
-\include{new-chapters/hpmor-chapter-043}
-\include{new-chapters/hpmor-chapter-044}
-\include{new-chapters/hpmor-chapter-045}
-\include{new-chapters/hpmor-chapter-046}
-\include{new-chapters/hpmor-chapter-047}
-\include{new-chapters/hpmor-chapter-048}
-\include{new-chapters/hpmor-chapter-049}
-\include{new-chapters/hpmor-chapter-050}
-\include{new-chapters/hpmor-chapter-051}
-\include{new-chapters/hpmor-chapter-052} 
-\include{new-chapters/hpmor-chapter-053}
-\include{new-chapters/hpmor-chapter-054}
-\include{new-chapters/hpmor-chapter-055}
-\include{new-chapters/hpmor-chapter-056}
-\include{new-chapters/hpmor-chapter-057}
-\include{new-chapters/hpmor-chapter-058}
-\include{new-chapters/hpmor-chapter-059}
-\include{new-chapters/hpmor-chapter-060}
-\include{new-chapters/hpmor-chapter-061}
-\include{new-chapters/hpmor-chapter-062} 
-\include{new-chapters/hpmor-chapter-063}
+\include{chapters/hpmor-chapter-038}
+\include{chapters/hpmor-chapter-039}
+\include{chapters/hpmor-chapter-040}
+\include{chapters/hpmor-chapter-041}
+\include{chapters/hpmor-chapter-042} 
+\include{chapters/hpmor-chapter-043}
+\include{chapters/hpmor-chapter-044}
+\include{chapters/hpmor-chapter-045}
+\include{chapters/hpmor-chapter-046}
+\include{chapters/hpmor-chapter-047}
+\include{chapters/hpmor-chapter-048}
+\include{chapters/hpmor-chapter-049}
+\include{chapters/hpmor-chapter-050}
+\include{chapters/hpmor-chapter-051}
+\include{chapters/hpmor-chapter-052} 
+\include{chapters/hpmor-chapter-053}
+\include{chapters/hpmor-chapter-054}
+\include{chapters/hpmor-chapter-055}
+\include{chapters/hpmor-chapter-056}
+\include{chapters/hpmor-chapter-057}
+\include{chapters/hpmor-chapter-058}
+\include{chapters/hpmor-chapter-059}
+\include{chapters/hpmor-chapter-060}
+\include{chapters/hpmor-chapter-061}
+\include{chapters/hpmor-chapter-062} 
+\include{chapters/hpmor-chapter-063}
 
 \include{hp-colophon}
 \end{document}
