--- a/hpmor-6.tex
+++ b/hpmor-6.tex
@@ -1,35 +1,46 @@
 \input{hp-header}
 
 \begin{document}
-\include{hp-intro-6}
-\pagenumbering{gobble}
-\include{hp-contents}
-\pagenumbering{arabic}
+{
+\pagestyle{empty}
 
-\setcounter{page}{0}
-\include{new-chapters/hpmor-chapter-100}
-\include{new-chapters/hpmor-chapter-101}
-\include{new-chapters/hpmor-chapter-102}
-\include{new-chapters/hpmor-chapter-103}
-\include{new-chapters/hpmor-chapter-104}
-\include{new-chapters/hpmor-chapter-105}
-\include{new-chapters/hpmor-chapter-106}
-\include{new-chapters/hpmor-chapter-107}
-\include{new-chapters/hpmor-chapter-108}
-\include{new-chapters/hpmor-chapter-109}
-\include{new-chapters/hpmor-chapter-110}
-\include{new-chapters/hpmor-chapter-111}
-\include{new-chapters/hpmor-chapter-112}
-\include{new-chapters/hpmor-chapter-113}
-\include{new-chapters/hpmor-chapter-114}
-\include{new-chapters/hpmor-chapter-115}
-\include{new-chapters/hpmor-chapter-116}
-\include{new-chapters/hpmor-chapter-117}
-\include{new-chapters/hpmor-chapter-118}
-\include{new-chapters/hpmor-chapter-119}
-\include{new-chapters/hpmor-chapter-120}
-\include{new-chapters/hpmor-chapter-121}
-\include{new-chapters/hpmor-chapter-122}
+\newcommand{\hpBookNo}{6}
+\newcommand{\hpBookChar}{Harry James Potter-{\kern 2pt}Evans-{\kern 4pt}Verres}
+\newcommand{\hpBookTitle}{Philosopher's Stone}
+\newcommand{\hpBookChapters}{Chapters 100--122}
+\newcommand{\hpBookOther}{}
+\input{hp-titlepage}
+
+\pagenumbering{gobble}
+\input{hp-contents}
+\cleartorecto
+}
+\pagenumbering{arabic}
+\setcounter{page}{1}
+
+\include{chapters/hpmor-chapter-100}
+\include{chapters/hpmor-chapter-101}
+\include{chapters/hpmor-chapter-102}
+\include{chapters/hpmor-chapter-103}
+\include{chapters/hpmor-chapter-104}
+\include{chapters/hpmor-chapter-105}
+\include{chapters/hpmor-chapter-106}
+\include{chapters/hpmor-chapter-107}
+\include{chapters/hpmor-chapter-108}
+\include{chapters/hpmor-chapter-109}
+\include{chapters/hpmor-chapter-110}
+\include{chapters/hpmor-chapter-111}
+\include{chapters/hpmor-chapter-112}
+\include{chapters/hpmor-chapter-113}
+\include{chapters/hpmor-chapter-114}
+\include{chapters/hpmor-chapter-115}
+\include{chapters/hpmor-chapter-116}
+\include{chapters/hpmor-chapter-117}
+\include{chapters/hpmor-chapter-118}
+\include{chapters/hpmor-chapter-119}
+\include{chapters/hpmor-chapter-120}
+\include{chapters/hpmor-chapter-121}
+\include{chapters/hpmor-chapter-122}
 
 \include{hp-colophon}
 \end{document}
