--- a/hpmor-5.tex
+++ b/hpmor-5.tex
@@ -4,7 +4,7 @@
 {
 \pagestyle{empty}
 
-\newcommand{\hpBookNo}{2}
+\newcommand{\hpBookNo}{5}
 \newcommand{\hpBookChar}{Harry James Potter-{\kern 2pt}Evans-{\kern 4pt}Verres}
 \newcommand{\hpBookTitle}{Last Enemy}
 \newcommand{\hpBookChapters}{Chapters 86--99}
@@ -13,25 +13,71 @@
 
 \pagenumbering{gobble}
 \input{hp-contents}
+\cleartoverso
+
+% Headlines
+\begin{Spacing}{0.95}
+(International news headlines of April 7th, 1992:)
+\vspace{1cm}
+
+\emph{Toronto Magical Tribune:}
+
+\headline{Entire British Wizengamot Reports Seeing\\
+`Boy-Who-Lived' Frighten a Dementor}
+
+\headline{Expert on Magical Creatures:\\
+``Now You're Just Lying''}
+
+\headline{France, Germany Accuse Britain\\
+of Making the Whole Thing Up}
+
+\emph{New Zealand Spellcrafter's Diurnal Notice:}
+
+\headline{What Drove British Legislature Insane?\\
+Could Our Government Be Next?}
+
+\headline{Experts List Top 28 Reasons\\
+To Believe It's Already Happened}
+
+\emph{American Mage:}
+
+\headline{Werewolf Clan to Become\\
+First Inhabitants of Wyoming}
+
+\emph{The Quibbler:}
+
+\headline{Malfoy Flees Hogwarts\\
+As Veela Powers Awaken}
+
+\emph{Daily Prophet:}
+
+\headline{Legal Tricks Free\\
+``Mad Muggleborn''\\
+As Potter Threatens Ministry\\
+With Attack on Azkaban}
+\end{Spacing}
+
+% End headlines
 \cleartorecto
+
 }
 \pagenumbering{arabic}
 \setcounter{page}{1}
 
-\input{chapters/hpmor-chapter-086}
-\input{chapters/hpmor-chapter-087}
-\input{chapters/hpmor-chapter-088}
-\input{chapters/hpmor-chapter-089}
-\input{chapters/hpmor-chapter-090} 
-\input{chapters/hpmor-chapter-091}
-\input{chapters/hpmor-chapter-092}
-\input{chapters/hpmor-chapter-093}
-\input{chapters/hpmor-chapter-094}
-\input{chapters/hpmor-chapter-095}
-\input{chapters/hpmor-chapter-096}
-\input{chapters/hpmor-chapter-097}
-\input{chapters/hpmor-chapter-098}
-\input{chapters/hpmor-chapter-099}
+\include{chapters/hpmor-chapter-086}
+\include{chapters/hpmor-chapter-087}
+\include{chapters/hpmor-chapter-088}
+\include{chapters/hpmor-chapter-089}
+\include{chapters/hpmor-chapter-090} 
+\include{chapters/hpmor-chapter-091}
+\include{chapters/hpmor-chapter-092}
+\include{chapters/hpmor-chapter-093}
+\include{chapters/hpmor-chapter-094}
+\include{chapters/hpmor-chapter-095}
+\include{chapters/hpmor-chapter-096}
+\include{chapters/hpmor-chapter-097}
+\include{chapters/hpmor-chapter-098}
+\include{chapters/hpmor-chapter-099}
 
-\input{hp-colophon}
+\include{hp-colophon}
 \end{document}
