Chapter title word wrap
also lettrine calls, spell italicization, colophon change

--- a/hp-colophon.tex
+++ b/hp-colophon.tex
@@ -4,16 +4,16 @@
 \vbox{
 \parshape 1 0em 20em
 \noindent
-\leftskip=0pt\rightskip=0pt\parfillskip=0pt plus 1fil{}\emph{This book was 
-formatted by fans of the story.
+\leftskip=0pt\rightskip=0pt\parfillskip=0pt plus 1fil{}\emph{This
+book was formatted by fans of the story.
 The text was set in 11-point URW~Garamond~No.~8.
-Parseltongue was set in Huerta Tipografica's
-Alegreya Sans Light Italic.
 Chapter headings were set in Lumos, inspired by
 the display font used in the US editions of the Harry Potter books,
 drawn by Sarah McFalls.
 The book was typeset using \emph{\LaTeX \xspace} and built on
-\today\ at \DTMcurrenttime.}
+\today\ at \DTMcurrenttime.
+Final formatting and production was completed by Blaise Whitesell.
+Email \emph{blaisewh@gmail.com} if you find any errors.}
 
 }\vskip\footskip%
 \vfil\vfil
