--- a/hp-contents.tex
+++ b/hp-contents.tex
@@ -1,4 +1,5 @@
 \cleartorecto
+\renewcommand*{\hpmorchapbreak}{\ } % Prevent linebreaks in TOC
 \renewcommand*{\printtoctitle}[1]{\centering\Huge{\hp\MakeUppercase{#1}}}
 \setlength{\cftbeforechapterskip}{.5\baselineskip plus 12pt minus 3pt}
 \renewcommand*{\cftchapterleader}{\space—\space}
@@ -26,3 +27,4 @@
 \clearpage
 \thispagestyle{empty}
 \hbox{}
+\renewcommand*{\hpmorchapbreak}{\linebreak} % Restore previous functionality
