Moved a fontspec declaration
Huge performance gains (now builds 5x faster)
Previously, the font was reloaded every single time a decorative star
was drawn. Also cuts the log files to 10% of their former length.

--- a/hp-header.tex
+++ b/hp-header.tex
@@ -55,8 +55,11 @@
 % Chapter numbers: Lumos (extreme spacing for effect)
 \newfontface\hpchap[ExternalLocation, LetterSpace=80.0, WordSpace=2.0]{Lumos}
 %
+% Font used to draw the magic star
+\newfontface\starfont[ExternalLocation]{Miscelanea.ttf}
+%
 % Draws a “magic star”, used as a decoration
-\newcommand*{\Star}{{\fontspec[ExternalLocation]{Miscelanea.ttf}*}}
+\newcommand*{\Star}{{\starfont{}*}}
 %
 % Draws three “magic stars”, used as a decoration everywhere
 \newcommand*{\Stars}{{\large\Star\kern-.6ex\lower1.3ex\hbox{\large\Star}%
