--- a/hp-colophon.tex
+++ b/hp-colophon.tex
@@ -2,18 +2,18 @@
 {\null\vfil%
 \thispagestyle{empty}\noindent\rightskip=0pt plus 1fil\leftskip=0pt plus 1fil\parfillskip=0pt%
 \vbox{
-\parshape 1 0em 20em
+\parshape 1 0em 21em
 \noindent
 \leftskip=0pt\rightskip=0pt\parfillskip=0pt plus 1fil{}\emph{This
-book was formatted by fans of the story.
+book was formatted by Blaise Whitesell,
+who built off the work of other fans of the story.
 The text was set in 11-point URW~Garamond~No.~8.
 Chapter headings were set in Lumos, inspired by
 the display font used in the US editions of the Harry Potter books,
 drawn by Sarah McFalls.
 The book was typeset using \emph{\LaTeX \xspace} and built on
 \today\ at \DTMcurrenttime.
-Final formatting and production was completed by Blaise Whitesell.
-Email \emph{blaisewh@gmail.com} if you find any errors.}
+}
 
 }\vskip\footskip%
 \vfil\vfil
