Comments, penalties, and a semicolon

--- a/hp-contents.tex
+++ b/hp-contents.tex
@@ -1,6 +1,6 @@
 \cleartorecto
 \renewcommand*{\hpmorchapbreak}{\ } % Prevent linebreaks in TOC
-\renewcommand*{\printtoctitle}[1]{\centering\Huge{\hp\MakeUppercase{#1}}}
+\renewcommand*{\printtoctitle}[1]{\centering\huge{\hp\MakeUppercase{#1}}}
 \setlength{\cftbeforechapterskip}{.5\baselineskip plus 12pt minus 3pt}
 \renewcommand*{\cftchapterleader}{\space—\space}
 \renewcommand*{\cftchapterfillnum}[1]{%
